--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,10 @@ android {
 }
 
 dependencies {
+    //CameraX
+    implementation 'androidx.camera:camera-view:1.1.0'
+    implementation "androidx.camera:camera-camera2:1.2.0-rc01"
+    implementation 'androidx.camera:camera-lifecycle:1.1.0'
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
